# ludolph

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  STYLE.md
.claude/commands/: deploy.md  release.md
.claude/skills/: branch.md  commit.md  health-check.md  pr.md
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: CNAME  MEMORY.md  app.js  bootstrap.sh  conversation-philosophy.md  index.html  install  jetpacks.html  jetpacks.md  learn.md  pi-setup.md  plugins.html  setup.md  style.css  troubleshooting.md  vault.html  vaults.html
docs/plans/: 2026-02-21-initial-design.md  2026-02-22-release-skill-design.md  2026-02-22-release-skill.md  2026-02-26-openclaw-enhancements.md  2026-02-26-phased-roadmap-design.md  2026-02-26-release-process-design.md  2026-02-26-release-process.md  2026-02-27-llm-proxy-design.md  2026-02-27-llm-proxy-implementation.md  2026-02-27-phase1-quick-wins.md  2026-02-27-phase2-core-ux.md  2026-03-03-event-bus-channel-design.md  2026-03-03-event-bus-channel-implementation.md  2026-03-06-pi-hub-architecture-design.md  2026-03-06-pi-hub-implementation.md
docs/plugins/: creating-plugins.md  getting-started.md  manifest-reference.md
docs/research/: 2026-03-26-candlekeep-evaluation.md
docs/superpowers/plans/: 2026-03-11-lu-mcp-architecture-fix.md  2026-03-12-plugin-creation-experience.md  2026-03-15-plugin-documentation.md  2026-03-16-conversation-philosophy.md  2026-03-17-message-debouncing.md  2026-03-26-mcp-resilience.md  2026-03-26-vault-index.md  2026-04-14-telegram-progress-updates.md
docs/superpowers/specs/: 2026-03-11-lu-mcp-architecture-fix-design.md  2026-03-12-plugin-creation-experience-design.md  2026-03-15-plugin-documentation-design.md  2026-03-16-conversation-philosophy-design.md  2026-03-17-lu-update-design.md  2026-03-17-message-debouncing-design.md  2026-03-18-focus-layer-design.md  2026-03-26-vault-index-design.md  2026-04-14-telegram-progress-updates-design.md
examples/plugins/lu-example/: CLAUDE.md  README.md  lu-plugin.toml  pyproject.toml
examples/plugins/lu-example/src/: __init__.py  server.py
examples/plugins/lu-example/tests/: __init__.py  test_tools.py
scripts/: install-mcp.sh  package-mcp.sh
src/: api.rs  bot.rs  channel.rs  claude.rs  cli.rs  config.rs  event_handler.rs  focus.rs  llm.rs  main.rs  mcp_client.rs  memory.rs  preflight.rs  scheduler.rs  setup.rs  sse_client.rs  ssh.rs  syncthing.rs  telegram.rs
src/cli/: commands.rs  mod.rs  plugin.rs  setup.rs  sync.rs
src/cli/checks/: config.rs  mod.rs  network.rs  services.rs
src/cli/plugin/: mod.rs  templates.rs
src/index/: chunker.rs  enricher.rs  indexer.rs  manifest.rs  mod.rs  watcher.rs
src/mcp/: Makefile  README.md  __init__.py  channel.py  context.py  event_bus.py  llm.py  mcp_server.py  process_manager.py  pyproject.toml  registry.py  security.py  server.py  setup_llm.py  tools.py
src/mcp/plugins/: __init__.py  manager.py  manifest.py  storage.py
src/mcp/plugins/tests/: test_manager.py  test_manifest.py  test_storage.py
src/mcp/tests/: __init__.py  conftest.py  test_channel.py  test_context.py  test_conversation.py  test_event_bus.py  test_history.py  test_index_freshness.py  test_integration_philosophy.py  test_live_context.py  test_llm.py  test_obligations.py  test_process_manager.py  test_schedules.py  test_semantic.py  test_server_channel.py  test_server_chat.py  test_server_context.py  test_server_events.py  test_tools.py
src/mcp/tools/: __init__.py  analysis.py  analytics.py  backlinks.py  batch.py  channel.py  conversation.py  directories.py  editing.py  embeddings.py  files.py  history.py  index.py  learn.py  memory.py  meta.py  metadata.py  obligations.py  observations.py  periodic.py  publish.py  schedules.py  search.py  semantic.py  tags.py  tasks.py  teach.py  telegram.py  text.py
src/mcps/: registry.toml
src/tools/: append_file.rs  complete_setup.rs  create_file.rs  list_dir.rs  mod.rs  read_file.rs  schedule.rs  search.rs  search_index.rs  vault_map.rs
src/ui/: mod.rs  prompt.rs  spinner.rs  status.rs  table.rs
tests/: test_embeddings.py  test_observations.py
website/: index.html
(+7 files in other folders)
