[package]
name = "ludolph"
version = "0.1.0"
edition = "2024"
description = "A real brain for your second brain. Talk to your vault, from anywhere, anytime."
license = "MIT"
repository = "https://github.com/evannagle/ludolph"
readme = "README.md"
keywords = ["obsidian", "telegram", "claude", "ai", "assistant"]
categories = ["command-line-utilities"]

[[bin]]
name = "lu"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
walkdir = "2"
ignore = "0.4"
regex = "1"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["prepush-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt", "run-cargo-test"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
