[package]
name = "ludolph"
version = "0.5.1"
edition = "2024"
description = "A real brain for your second brain. Talk to your vault, from anywhere, anytime."
license = "MIT"
repository = "https://github.com/evannagle/ludolph"
readme = "README.md"
keywords = ["obsidian", "telegram", "claude", "ai", "assistant"]
categories = ["command-line-utilities"]

[[bin]]
name = "lu"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
walkdir = "2"
ignore = "0.4"
regex = "1"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
shellexpand = "3"
dirs = "5"
rand = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anthropic-sdk-rust = "0.1"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["prepush-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt", "run-cargo-test"] }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
