[project]
name = "ludolph-mcp"
version = "0.5.0"
description = "MCP server for Ludolph - general-purpose filesystem access"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.1",
    "pytest>=7.0",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
